Back to JDK 1.7